--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Bite</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="styles.css">
    
 
@@ -17,7 +19,7 @@
           &#9776; 
         </div>
         <div class="logo">
-            <img class="logo" src="logo blanco.png" alt="">
+            <img class="logo" src="img/logo blanco.png" alt="">
         </div>
         <button class="btn-amarillo">
             ¡Pedí Ya!
@@ -38,10 +40,57 @@
     <h1 class="tituloBlanco">Gran Sabor,</h1>
    
     <div class="container-ppal">
-    <img class="imgPrincipal" src="burgerInicio.png" alt="">
+    <img class="imgPrincipal" src="img/burgerInicio.png" alt="">
     </div>
     <h1 class="tituloAmarillo">Big Bite.</h1>
 </div>
+
+<!--Carousel-->
+<div class="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/burger1.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Una hamburguesa con carne jugosa, lechuga fresca, tomate, pepinillos crujientes y una capa de cebolla frita, todo bañado en una salsa especial de la casa.</p>
+      </div>
+    </div>
+ 
+    <div class="carousel-item">
+      <img src="img/burger2.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Una hamburguesa con carne jugosa, lechuga fresca, tomate, pepinillos crujientes y una capa de cebolla frita, todo bañado en una salsa especial de la casa.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img/burger3.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+  
+</div>
+</div>
+
+
+
 <script src="script.js"></script>
 </body>
 </html>
