--- a/index.html
+++ b/index.html
@@ -55,10 +55,17 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/burger1.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
+      <h1 class="maspopular">Más Popular</h1>
+      <div class="imgburger">
+        <img src="img/burger1.png" class="carousel-img" alt="...">
+      </div>
+      <div class="carousel-caption burger-info">
         <h5>First slide label</h5>
-        <p>Una hamburguesa con carne jugosa, lechuga fresca, tomate, pepinillos crujientes y una capa de cebolla frita, todo bañado en una salsa especial de la casa.</p>
+        <p>Una hamburguesa con carne jugosa, lechuga fresca, tomate, pepinillos crujientes y una capa de cebolla frita, todo bañado en una salsa especial de la casa.</p>      
+        <button class="btn-primary">¡Voy por la mía!</button>
+      </div>
+      <div>
+        <button class="btn-secondary">Ver el menú completo</button>
       </div>
     </div>
  
@@ -88,6 +95,8 @@
   
 </div>
 </div>
+
+
 
 
 
