--- a/formulario.html
+++ b/formulario.html
@@ -12,8 +12,8 @@
     <form action="/submit-your-form-handler" method="POST" class="formulario">
         
         
-        <label for="fullname">Nombre completo</label>
-        <input type="text" id="fullname" name="fullname" required>
+        <label for="nombreCompleto">Nombre completo</label>
+        <input type="text" id="nombreCompleto" name="nombreCompleto" required>
 
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required>
@@ -21,30 +21,30 @@
         <label for="password">Contraseña</label>
         <input type="password" id="password" name="password" required>
 
-        <label for="gender">Género</label>
-        <select id="gender" name="gender">
-            <option value="male">Hombre</option>
-            <option value="female">Mujer</option>
-            <option value="other">Otro</option>
+        <label for="genero">Género</label>
+        <select id="genero" name="genero">
+            <option value="hombre">Hombre</option>
+            <option value="mujer">Mujer</option>
+            <option value="otro">Otro</option>
         </select>
 
-        <label for="birthdate">Fecha de nacimiento</label>
-        <input type="date" id="birthdate" name="birthdate" required>
+        <label for="nacimiento">Fecha de nacimiento</label>
+        <input type="date" id="nacimiento" name="nacimiento" required>
 
-        <label for="province">Provincia</label>
-        <input type="text" id="province" name="province" required>
+        <label for="provincia">Provincia</label>
+        <input type="text" id="provincia" name="provincia" required>
 
-        <label for="city">Ciudad</label>
-        <input type="text" id="city" name="city" required>
+        <label for="ciudad">Ciudad</label>
+        <input type="text" id="ciudad" name="ciudad" required>
 
-        <label for="street">Calle</label>
-        <input type="text" id="street" name="street" required>
+        <label for="calle">Calle</label>
+        <input type="text" id="calle" name="calle" required>
 
-        <label for="streetnumber">Número</label>
-        <input type="text" id="streetnumber" name="streetnumber" required>
+        <label for="numeroCalle">Número</label>
+        <input type="text" id="numeroCalle" name="numeroCalle" required>
 
-        <label for="postalcode">Código postal</label>
-        <input type="text" id="postalcode" name="postalcode" required>
+        <label for="codigoPostal">Código postal</label>
+        <input type="text" id="codigoPostal" name="codigoPostal" required>
 
         <button type="reset">Reset</button>
         <button type="submit">Regístrate</button>
